# detonator

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  DESIGN.md  ISSUES.md  Jamfile  PROFILING.md  README.md  ROADMAP.md  audio.cpp  audio.h  conanfile.txt  config.h  game.cpp  game.h  gamewidget.cpp  gamewidget.h  invaders.pro  invaders.sh  invaders.sublime-project  level.cpp  level.h  linux_linker_gamelib.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtmain_win.cpp  resource.qrc  warnpop.h  warnpush.h
audio/: README.md  algo.h  audio_file_source.cpp  audio_file_source.h  audio_graph_source.cpp  audio_graph_source.h  buffer.h  command.h  decoder.h  device.cpp  device.h  element.cpp  element.h  format.cpp  format.h  fucking_audio_device.cpp  fwd.h  graph.cpp  graph.h  loader.cpp  loader.h  mpg123.cpp  mpg123.h  openal.cpp  player.cpp  player.h  port.h  proxy.cpp  pulseaudio.cpp  sample.cpp  sample.h  sdl.cpp  sine_source.h  sndfile.cpp  sndfile.h  sokol.cpp  source.cpp  source.h  stream.h  thread_proxy_source.cpp  (+2 more)
audio/doc/: audio.drawio
audio/elements/: delay.cpp  delay.h  effect.cpp  effect.h  element.h  file_source.cpp  file_source.h  gain.cpp  gain.h  graph.cpp  graph.h  graph_class.cpp  graph_class.h  mixer.cpp  mixer.h  mixer_source.cpp  mixer_source.h  null.h  playlist.cpp  playlist.h  queue.cpp  queue.h  resampler.cpp  resampler.h  sine_source.cpp  sine_source.h  splitter.cpp  splitter.h  stereo_joiner.cpp  stereo_joiner.h  stereo_maker.cpp  stereo_maker.h  stereo_splitter.cpp  stereo_splitter.h  stream_source.cpp  stream_source.h  zero_source.cpp  zero_source.h
audio/test/: config.h  main.cpp  warnpush.h
audio/unit_test/: unit_test.cpp  unit_test_graph.cpp
base/: allocator.h  assert.cpp  assert.h  bitflag.h  box.h  cmdline.h  color4f.h  config.h  format.cpp  format.h  grid.h  hash.h  json.cpp  json.h  logging.cpp  logging.h  math.h  memory.cpp  memory.h  noise.h  platform.h  polyline.h  random.h  rotator.h  scanf.h  snafu.h  test_float.h  test_help.h  test_minimal.cpp  test_minimal.h  threadpool.cpp  threadpool.h  trace.cpp  trace.h  transform.h  tree.h  treeop.h  types.h  utility.cpp  utility.h  (+4 more)
base/unit_test/: config.h  unit_test.cpp  unit_test_cmdline.cpp  unit_test_grid.cpp  unit_test_log.cpp  unit_test_math.cpp  unit_test_memory.cpp  unit_test_scanf.cpp  unit_test_thread.cpp  unit_test_wavefront.cpp
config/: config.h  warnpop.h  warnpush.h
data/: chunk.h  fwd.h  io.cpp  io.h  json.cpp  json.h  reader.h  writer.h
data/unit_test/: unit_test.cpp
device/: device.h  enum.h  graphics.h  handle.h  opengles.cpp  types.h  uniform.h  vertex.cpp  vertex.h
docu/: OpenGL Camera.html  OpenGL-projection.html
docu/OpenGL Camera_files/: a.html  a_002.html  embed.js  gl_camera.html  gl_camera_002.html  menu.js  print.css  screen.css  songho.js
docu/OpenGL-projection_files/: cookie-consent.js  lunr-store.js  main.css
editor/: config.h  warnpop.h  warnpush.h  welcome.qrc
editor/app/: buffer.cpp  buffer.h  event.h  (+51 more)
editor/gui/qt/: CMakeLists.txt  plugin.cpp  plugin.h
editor/gui/qt/config/: config.h
emscripten/: CMakeLists.txt  Makefile  config.h  main.cpp  test-engine.html  warnpop.h  warnpush.h
emscripten/test/: backup-sine.cpp  config.h  sine.cpp  warnpop.h  warnpush.h
engine/: README.md  action.h  animation.cpp  animation.h  audio.cpp  audio.h  camera.cpp  camera.h  classlib.h  color.h  context.cpp  context.h  cpp_game_runtime.cpp  cpp_game_runtime.h  data.h  engine-logo.cpp  engine-logo.h  engine.cpp  engine.h  entity.cpp  entity.h  entity_script.h  enum.h  event.h  format.h  frametimer.h  game.h  game_dummy.cpp  graphics.cpp  graphics.h  homedir.cpp  homedir.h  loader.cpp  loader.h  lua.cpp  lua.h  lua_array.h  lua_base.cpp  lua_data.cpp  lua_game.cpp  (+25 more)
game/: actuator.cpp  actuator.h  animation.cpp  animation.h  animator.cpp  animator.h  animator_base.h  color.h  config.h  entity.cpp  entity.h  entity_class.cpp  entity_class.h  entity_node.cpp  entity_node.h  entity_node_drawable_item.cpp  entity_node_drawable_item.h  entity_node_fixture.cpp  entity_node_fixture.h  entity_node_light.cpp  entity_node_light.h  entity_node_linear_mover.cpp  entity_node_linear_mover.h  entity_node_mesh_effect.cpp  entity_node_mesh_effect.h  entity_node_rigid_body.cpp  entity_node_rigid_body.h  entity_node_rigid_body_joint.cpp  entity_node_rigid_body_joint.h  entity_node_spatial_node.cpp  entity_node_spatial_node.h  entity_node_spline_mover.cpp  entity_node_spline_mover.h  entity_node_text_item.cpp  entity_node_text_item.h  entity_node_tilemap_node.cpp  entity_node_tilemap_node.h  entity_node_transformer.cpp  entity_node_transformer.h  entity_placement.cpp  (+59 more)
gamelib/: animation.cpp  animation.h  asset.h  classlib.h  engine.cpp  engine.h  entity.cpp  entity.h  enum.h  format.h  game.h  gfxfactory.h  loader.cpp  loader.h  lua.cpp  lua.h  physics.cpp  physics.h  renderer.cpp  renderer.h  scene.cpp  scene.h  settings.h  transform.h  tree.h  treeop.h  types.cpp  types.h
graphics/: README.md  algo.cpp  algo.h  basic_light_program.cpp  basic_light_program.h  bitmap.cpp  bitmap.h  bitmap_algo.h  bitmap_generator.h  bitmap_interface.h  bitmap_noise.cpp  bitmap_noise.h  bitmap_view.h  color4f.h  debug_drawable.cpp  debug_drawable.h  device.cpp  device.h  device_algo.cpp  device_algo.h  device_framebuffer.cpp  device_framebuffer.h  device_geometry.cpp  device_geometry.h  device_instance.cpp  device_instance.h  device_program.cpp  device_program.h  device_shader.cpp  device_shader.h  device_texture.cpp  device_texture.h  drawable.cpp  drawable.h  drawable_class.h  drawcmd.cpp  drawcmd.h  drawing.cpp  drawing.h  effect_drawable.cpp  (+105 more)
misc/: homedir.cpp  homedir.h  settings.h
pinyin-invaders/: content.json  gamewidget.cpp  gamewidget.h  main.cpp  workspace.json
scene/: animation.cpp  animation.h  gfxfactory.h  tree.h
tools/: .htaccess  canner.cpp  http-server.py  wc.sh
uikit/: README.md  animation.cpp  animation.h  fwd.h  layout.cpp  layout.h  op.h  painter.h  state.h  types.h  widget.cpp  widget.h  window.cpp  window.h
(+417 files in other folders)
